bk_ida/gccida/g1/optimize_minmax_comparison
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_minmax_comparison/src/fold-const.c:4832:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v1; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_minmax_comparison/src/fold-const.c:4839:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_minmax_comparison/src/fold-const.c:4840:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_minmax_comparison/src/fold-const.c:4843:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_minmax_comparison/src/fold-const.c:4844:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_minmax_comparison/src/fold-const.c:4845:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_minmax_comparison/src/fold-const.c:4847:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_minmax_comparison/src/fold-const.c:4849:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_minmax_comparison/src/fold-const.c:4850:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_minmax_comparison/src/fold-const.c:4851:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_minmax_comparison/src/fold-const.c:4852:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_minmax_comparison/src/fold-const.c:4853:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_minmax_comparison/src/fold-const.c:4869:21: error: expected expression
v8 = *( tree_node **)( low + 40); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_minmax_comparison/src/fold-const.c:4869:9: error: use of undeclared identifier 'tree_node'
v8 = *( tree_node **)( low + 40); 
        ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_minmax_comparison/src/obj/fold-const.o] Error 1
